[project]
name = "python-modern-cl-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Poramat", email = "poramat.chianvichai@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-modern-cl-2024 = "python_modern_cl_2024:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
